Revert r266 - Integer.valueOf() and friends are 1.5+ features, so it breaks 1.4 support
git-svn-id: https://svn.java.net/svn/jna~svn/trunk@268 2f8a963e-d2e4-e7d0-97bf-ccb7fcea9d80