@@ -249,25 +249,25 @@ public abstract class Structure {
             result = s;
         }
         else if (nativeType == byte.class || nativeType == Byte.class) {
-            result = Byte.valueOf(memory.getByte(offset));
+            result = new Byte(memory.getByte(offset));
         }
         else if (nativeType == short.class || nativeType == Short.class) {
-            result = Short.valueOf(memory.getShort(offset));
+            result = new Short(memory.getShort(offset));
         }
         else if (nativeType == char.class || nativeType == Character.class) {
-            result = Character.valueOf(memory.getChar(offset));
+            result = new Character(memory.getChar(offset));
         }
         else if (nativeType == int.class || nativeType == Integer.class) {
-            result = Integer.valueOf(memory.getInt(offset));
+            result = new Integer(memory.getInt(offset));
         }
         else if (nativeType == long.class || nativeType == Long.class) {
-            result = Long.valueOf(memory.getLong(offset));
+            result = new Long(memory.getLong(offset));
         }
         else if (nativeType == float.class || nativeType == Float.class) {
-            result = Float.valueOf(memory.getFloat(offset));
+            result=new Float(memory.getFloat(offset));
         }
         else if (nativeType == double.class || nativeType == Double.class) {
-            result = Double.valueOf(memory.getDouble(offset));
+            result = new Double(memory.getDouble(offset));
         }
         else if (nativeType == Pointer.class) {
             result = memory.getPointer(offset);
